compatibility-tests/compile-fail/tests/ui/structs/visibility.stderr
error[E0603]: unit struct `Snafu` is private
  --> tests/ui/structs/visibility.rs:11:20
   |
11 |     let _ = inner::Snafu.build();
   |                    ^^^^^ private unit struct
   |
note: the unit struct `Snafu` is defined here
  --> tests/ui/structs/visibility.rs:6:21
   |
 6 |     #[derive(Debug, Snafu)]
   |                     ^^^^^
   = note: this error originates in the derive macro `Snafu` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0624]: method `build` is private
  --> tests/ui/structs/visibility.rs:11:26
   |
 6 |     #[derive(Debug, Snafu)]
   |                     ----- private method defined here
...
11 |     let _ = inner::Snafu.build();
   |                          ^^^^^ private method
